--- a/feature/index.html
+++ b/feature/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Team list</title>
+    <title>About</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -17,7 +17,7 @@
   <body class="composite">
     <div id="banner">
                     <div id="bannerLeft">
-                GitHub Maven Plugin Example - Module
+                GitHub Maven Plugin Example - Feature
                 </div>
                     <div class="clear">
         <hr/>
@@ -30,7 +30,7 @@
         <span id="publishDate">Last Published: 2012-08-09</span>
                   &nbsp;| <span id="projectVersion">Version: 1.0.0-SNAPSHOT</span>
                       </div>
-            <div class="xright">                    <a href="./" title="GitHub Maven Plugin Example - Module">GitHub Maven Plugin Example - Module</a>
+            <div class="xright">                    <a href="./" title="GitHub Maven Plugin Example - Feature">GitHub Maven Plugin Example - Feature</a>
               
         
       </div>
@@ -54,8 +54,8 @@
                           <a href="project-info.html" title="Project Information">Project Information</a>
                     <ul>
                       <li class="none">
-                          <a href="index.html" title="About">About</a>
-            </li>
+            <strong>About</strong>
+          </li>
                       <li class="none">
                           <a href="source-repository.html" title="Source Repository">Source Repository</a>
             </li>
@@ -87,8 +87,8 @@
                           <a href="license.html" title="Project License">Project License</a>
             </li>
                       <li class="none">
-            <strong>Project Team</strong>
-          </li>
+                          <a href="team-list.html" title="Project Team">Project Team</a>
+            </li>
                       <li class="none">
                           <a href="integration.html" title="Continuous Integration">Continuous Integration</a>
             </li>
@@ -104,22 +104,7 @@
     </div>
     <div id="bodyColumn">
       <div id="contentBox">
-        <div class="section"><h2>The Team<a name="The_Team"></a></h2><a name="The_Team"></a><p>A successful project requires many people to play many roles. Some members write code or documentation, while others are valuable as testers, submitting patches and suggestions.</p><p>The team is comprised of Members and Contributors. Members have direct access to the source of a project and actively evolve the code-base. Contributors improve the project through submission of patches and suggestions to the Members. The number of Contributors to the project is unbounded. Get involved today. All contributions to the project are greatly appreciated.</p><div class="section"><h3>Members<a name="Members"></a></h3><a name="Members"></a><p>The following is a list of developers with commit privileges that have directly contributed to the project in one way or another.</p><table border="0" class="bodyTable"><tr class="a"><th>Id</th><th>Name</th><th>Email</th><th>URL</th></tr><tr class="b"><td><a name="tmichel"></a>tmichel</td><td>FunThomas424242</td><td><a class="externalLink" href="mailto:funthomas424242@googlemail.com">funthomas424242@googlemail.com</a></td><td><a class="externalLink" href="https://github.com/funthomas424242">https://github.com/funthomas424242</a></td></tr></table></div><div class="section"><h3>Contributors<a name="Contributors"></a></h3><a name="Contributors"></a><p>There are no contributors listed for this project. Please check back again later.</p><script type="text/javascript">
-function offsetDate(id, offset) {
-    var now = new Date();
-    var nowTime = now.getTime();
-    var localOffset = now.getTimezoneOffset();
-    var developerTime = nowTime + ( offset * 60 * 60 * 1000 )+ ( localOffset * 60 * 1000 );
-    var developerDate = new Date(developerTime);
-
-    document.getElementById(id).innerHTML = developerDate;
-}
-
-function init(){
-}
-
-window.onLoad = init();
-</script></div></div>
+        <div class="section"><h2>About GitHub Maven Plugin Example - Feature<a name="About_GitHub_Maven_Plugin_Example_-_Feature"></a></h2><a name="About_GitHub_Maven_Plugin_Example_-_Feature"></a><p>Project to demonstrate GitHub Maven plugins</p></div>
       </div>
     </div>
     <div class="clear">
