--- a/feature/issue-tracking.html
+++ b/feature/issue-tracking.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>About</title>
+    <title>Issue Tracking</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -17,7 +17,7 @@
   <body class="composite">
     <div id="banner">
                     <div id="bannerLeft">
-                GitHub Maven Plugin Example - Module
+                GitHub Maven Plugin Example - Feature
                 </div>
                     <div class="clear">
         <hr/>
@@ -30,7 +30,7 @@
         <span id="publishDate">Last Published: 2012-08-09</span>
                   &nbsp;| <span id="projectVersion">Version: 1.0.0-SNAPSHOT</span>
                       </div>
-            <div class="xright">                    <a href="./" title="GitHub Maven Plugin Example - Module">GitHub Maven Plugin Example - Module</a>
+            <div class="xright">                    <a href="./" title="GitHub Maven Plugin Example - Feature">GitHub Maven Plugin Example - Feature</a>
               
         
       </div>
@@ -54,8 +54,8 @@
                           <a href="project-info.html" title="Project Information">Project Information</a>
                     <ul>
                       <li class="none">
-            <strong>About</strong>
-          </li>
+                          <a href="index.html" title="About">About</a>
+            </li>
                       <li class="none">
                           <a href="source-repository.html" title="Source Repository">Source Repository</a>
             </li>
@@ -66,8 +66,8 @@
                           <a href="mail-lists.html" title="Mailing Lists">Mailing Lists</a>
             </li>
                       <li class="none">
-                          <a href="issue-tracking.html" title="Issue Tracking">Issue Tracking</a>
-            </li>
+            <strong>Issue Tracking</strong>
+          </li>
                       <li class="none">
                           <a href="plugins.html" title="Project Plugins">Project Plugins</a>
             </li>
@@ -104,7 +104,7 @@
     </div>
     <div id="bodyColumn">
       <div id="contentBox">
-        <div class="section"><h2>About GitHub Maven Plugin Example - Module<a name="About_GitHub_Maven_Plugin_Example_-_Module"></a></h2><a name="About_GitHub_Maven_Plugin_Example_-_Module"></a><p>Project to demonstrate GitHub Maven plugins</p></div>
+        <div class="section"><h2>Overview<a name="Overview"></a></h2><a name="Overview"></a><p>This project uses GitHub Issues to manage its issues.</p></div><div class="section"><h2>Issue Tracking<a name="Issue_Tracking"></a></h2><a name="Issue_Tracking"></a><p>Issues, bugs, and feature requests should be submitted to the following issue tracking system for this project.</p><div class="source"><pre><a class="externalLink" href="https://github.com/funthomas424242/github-maven-example/issues">https://github.com/funthomas424242/github-maven-example/issues</a></pre></div></div>
       </div>
     </div>
     <div class="clear">
