--- a/feature/project-summary.html
+++ b/feature/project-summary.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Project Build Plugins</title>
+    <title>Project Summary</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -17,7 +17,7 @@
   <body class="composite">
     <div id="banner">
                     <div id="bannerLeft">
-                GitHub Maven Plugin Example - Module
+                GitHub Maven Plugin Example - Feature
                 </div>
                     <div class="clear">
         <hr/>
@@ -30,7 +30,7 @@
         <span id="publishDate">Last Published: 2012-08-09</span>
                   &nbsp;| <span id="projectVersion">Version: 1.0.0-SNAPSHOT</span>
                       </div>
-            <div class="xright">                    <a href="./" title="GitHub Maven Plugin Example - Module">GitHub Maven Plugin Example - Module</a>
+            <div class="xright">                    <a href="./" title="GitHub Maven Plugin Example - Feature">GitHub Maven Plugin Example - Feature</a>
               
         
       </div>
@@ -69,14 +69,14 @@
                           <a href="issue-tracking.html" title="Issue Tracking">Issue Tracking</a>
             </li>
                       <li class="none">
-            <strong>Project Plugins</strong>
-          </li>
+                          <a href="plugins.html" title="Project Plugins">Project Plugins</a>
+            </li>
                       <li class="none">
                           <a href="dependency-convergence.html" title="Dependency Convergence">Dependency Convergence</a>
             </li>
                       <li class="none">
-                          <a href="project-summary.html" title="Project Summary">Project Summary</a>
-            </li>
+            <strong>Project Summary</strong>
+          </li>
                       <li class="none">
                           <a href="dependency-management.html" title="Dependency Management">Dependency Management</a>
             </li>
@@ -104,7 +104,7 @@
     </div>
     <div id="bodyColumn">
       <div id="contentBox">
-        <div class="section"><h2>Project Build Plugins<a name="Project_Build_Plugins"></a></h2><a name="Project_Build_Plugins"></a><table border="0" class="bodyTable"><tr class="a"><th>GroupId</th><th>ArtifactId</th><th>Version</th></tr><tr class="b"><td>com.github.github</td><td><a class="externalLink" href="https://github.com/github/maven-plugins">downloads-maven-plugin</a></td><td>0.6</td></tr><tr class="a"><td>com.github.github</td><td><a class="externalLink" href="https://github.com/github/maven-plugins">site-maven-plugin</a></td><td>0.4</td></tr><tr class="b"><td>org.apache.maven.plugins</td><td><a class="externalLink" href="http://maven.apache.org/plugins/maven-clean-plugin/">maven-clean-plugin</a></td><td>2.4.1</td></tr><tr class="a"><td>org.apache.maven.plugins</td><td><a class="externalLink" href="http://maven.apache.org/plugins/maven-compiler-plugin/">maven-compiler-plugin</a></td><td>2.3.2</td></tr><tr class="b"><td>org.apache.maven.plugins</td><td><a class="externalLink" href="http://maven.apache.org/plugins/maven-deploy-plugin/">maven-deploy-plugin</a></td><td>2.5</td></tr><tr class="a"><td>org.apache.maven.plugins</td><td><a class="externalLink" href="http://maven.apache.org/plugins/maven-install-plugin/">maven-install-plugin</a></td><td>2.3.1</td></tr><tr class="b"><td>org.apache.maven.plugins</td><td><a class="externalLink" href="http://maven.apache.org/plugins/maven-jar-plugin/">maven-jar-plugin</a></td><td>2.3.2</td></tr><tr class="a"><td>org.apache.maven.plugins</td><td><a class="externalLink" href="http://maven.apache.org/plugins/maven-resources-plugin/">maven-resources-plugin</a></td><td>2.5</td></tr><tr class="b"><td>org.apache.maven.plugins</td><td><a class="externalLink" href="http://maven.apache.org/plugins/maven-site-plugin/">maven-site-plugin</a></td><td>3.0</td></tr><tr class="a"><td>org.eclipse.tycho</td><td><a class="externalLink" href="https://repository.sonatype.org/content/sites/maven-sites/forge-parent/tycho/tycho-compiler-plugin">tycho-compiler-plugin</a></td><td>0.12.0</td></tr><tr class="b"><td>org.eclipse.tycho</td><td><a class="externalLink" href="https://repository.sonatype.org/content/sites/maven-sites/forge-parent/tycho/tycho-maven-plugin">tycho-maven-plugin</a></td><td>0.12.0</td></tr><tr class="a"><td>org.eclipse.tycho</td><td><a class="externalLink" href="https://repository.sonatype.org/content/sites/maven-sites/forge-parent/tycho/tycho-p2/tycho-p2-plugin">tycho-p2-plugin</a></td><td>0.12.0</td></tr><tr class="b"><td>org.eclipse.tycho</td><td><a class="externalLink" href="https://repository.sonatype.org/content/sites/maven-sites/forge-parent/tycho/tycho-packaging-plugin">tycho-packaging-plugin</a></td><td>0.12.0</td></tr></table></div><div class="section"><h2>Project Report Plugins<a name="Project_Report_Plugins"></a></h2><a name="Project_Report_Plugins"></a><p>There are no plugins reports defined in the Reporting part of this project.</p></div>
+        <div class="section"><h2>Project Summary<a name="Project_Summary"></a></h2><a name="Project_Summary"></a><div class="section"><h3>Project Information<a name="Project_Information"></a></h3><a name="Project_Information"></a><table border="0" class="bodyTable"><tr class="a"><th>Field</th><th>Value</th></tr><tr class="b"><td>Name</td><td>GitHub Maven Plugin Example - Feature</td></tr><tr class="a"><td>Description</td><td>Project to demonstrate GitHub Maven plugins</td></tr><tr class="b"><td>Homepage</td><td><a class="externalLink" href="https://github.com/funthomas424242/github-maven-example/feature">https://github.com/funthomas424242/github-maven-example/feature</a></td></tr></table></div><div class="section"><h3>Project Organization<a name="Project_Organization"></a></h3><a name="Project_Organization"></a><p>This project does not belong to an organization.</p></div><div class="section"><h3>Build Information<a name="Build_Information"></a></h3><a name="Build_Information"></a><table border="0" class="bodyTable"><tr class="a"><th>Field</th><th>Value</th></tr><tr class="b"><td>GroupId</td><td>com.github.funthomas424242</td></tr><tr class="a"><td>ArtifactId</td><td>github-maven-example-feature</td></tr><tr class="b"><td>Version</td><td>1.0.0-SNAPSHOT</td></tr><tr class="a"><td>Type</td><td>eclipse-feature</td></tr></table></div></div>
       </div>
     </div>
     <div class="clear">
