--- a/feature/index.html
+++ b/feature/index.html
@@ -81,7 +81,7 @@
         
     
 
-        <div class="section"><h2>Test<a name="Test"></a></h2>
+        <div class="section"><h2>Feature<a name="Feature"></a></h2>
             <p>
                test
             </p>
