--- a/module/team-list.html
+++ b/module/team-list.html
@@ -63,9 +63,12 @@
           </ul>
                        <h5>Project Documentation</h5>
                   <ul>
-                                                                                                                  <li class="expanded">
+                                                                                                                                                                                          <li class="expanded">
                           <a href="project-info.html" title="Project Information">Project Information</a>
                     <ul>
+                      <li class="none">
+                          <a href="project-summary.html" title="Project Summary">Project Summary</a>
+            </li>
                       <li class="none">
                           <a href="license.html" title="Project License">Project License</a>
             </li>
@@ -73,10 +76,22 @@
                           <a href="source-repository.html" title="Source Repository">Source Repository</a>
             </li>
                       <li class="none">
+                          <a href="integration.html" title="Continuous Integration">Continuous Integration</a>
+            </li>
+                      <li class="none">
+                          <a href="issue-tracking.html" title="Issue Tracking">Issue Tracking</a>
+            </li>
+                      <li class="none">
+                          <a href="distribution-management.html" title="Distribution Management">Distribution Management</a>
+            </li>
+                      <li class="none">
             <strong>Project Team</strong>
           </li>
               </ul>
         </li>
+                                                                                      <li class="collapsed">
+                          <a href="project-reports.html" title="Project Reports">Project Reports</a>
+                  </li>
           </ul>
                                                                                                                    <a href="http://maven.apache.org/" title="Maven" class="poweredBy">
         <img class="poweredBy"  alt="Maven" src="http://maven.apache.org/images/logos/maven-feather.png"    />
